Configuring Dtos, Daos and Repos. Added some profiles and configuring context

--- a/MegaFilmes.API/appsettings.json
+++ b/MegaFilmes.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MegaFilmesDb;Trusted_Connection=true"
+  }
 }
