--- a/MegaFilmes.API/MegaFilmes.API.csproj
+++ b/MegaFilmes.API/MegaFilmes.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MegaFilmes.Services\MegaFilmes.Services.csproj" />
+  </ItemGroup>
+
 </Project>
