--- a/MegaFilmes.Services/MegaFilmes.Services.csproj
+++ b/MegaFilmes.Services/MegaFilmes.Services.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MegaFilmes.Data\MegaFilmes.Data.csproj" />
+    <ProjectReference Include="..\MegaFilmes.Models\MegaFilmes.Models.csproj" />
+  </ItemGroup>
+
 </Project>
