--- a/MegaFilmes.API/MegaFilmes.API.csproj
+++ b/MegaFilmes.API/MegaFilmes.API.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\MegaFilmes.Services\MegaFilmes.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
